fixed hamburger menu icon being too much to the left

--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -118,8 +118,6 @@ and open the template in the editor.
   position: absolute;
   top: 50%;
   left: 50%;
-  margin-left: -20px;
-  margin-top: -25px;
 
   &:hover {
     cursor: pointer;
